# odk-xform-tools

./: README.md  main.py  setup.cfg
odk_xform_tools/odk_xform_to_json_schema/: metadata_schema.py  xform_to_json_schema.py
sample_files/: json_schema_example_1.json  select_choices_example_2.json  xform_example_1.json  xform_example_2.json
