[metadata]
name = odk_xform_tools
version = 2.0.0
author = Ona Systems Inc
author_email = support@ona.io
url = https://github.com/onaio/odk-xform-tools
description = Parse a JSON ODK XForm into a JSON Schema and/or a flat select choices list
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pyxform

[options.extras_require]
tests =
    pytest